# learn-unix

./: Dockerfile  LICENSE  README.md  build.sh  learn.tar
learn/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.txt  configure  configure.ac
learn/lib/: Makefile.am  Makefile.in
learn/lib/editor/: L21.1d
learn/lib/files/: L0  L0.1a  L0.1aa  L0.1b  L0.1d  L1.2a  L1.2b  L10.3c  L11.1a  L11.3a  L11.3c  L12.1a  L12.2a  L12.2b  L12.3b  L12.3c  L13.1a  L3.1a  L3.2a  L3.2b  L3.3a  L3.3b  L4.3c  L6.1a  L6.2b  L9.1a  L9.2a
learn/lib/morefiles/: L0.1b  L0.1f  L1.1a  L1.1b  L1.1c  L1.1d  L2.1e  L3.1a  L3.1b  L3.1c  L3.1d  L3.1g  L4.1d  L4.1f  L4.1g  L5.1a  L5.1c  L6.1a  L6.1b  L6.1c  L6.1e
learn/man/: Makefile.am  Makefile.in  learn.1
learn/src/: Makefile.am  Makefile.in  config.h.in  lcount.c  learn.c  pathnames.h  tee.learn.c
